change some things

--- a/src/main/webapp/webAdmin/rate-list.html
+++ b/src/main/webapp/webAdmin/rate-list.html
@@ -182,7 +182,7 @@
 								//开启表格分页
 								"paging" : true,
 								"bProcessing" : true,
-								"bServerSide" : true,
+								"bServerSide" : false,
 								"bAutoWidth" : false,
 								"deferRender" : true,//延迟渲染
 								"iDisplayLength" : 10,
