--- a/src/main/webapp/webAdmin/offline-list.html
+++ b/src/main/webapp/webAdmin/offline-list.html
@@ -32,8 +32,9 @@
 	<header class="navbar-wrapper">
 		<div class="navbar navbar-fixed-top">
 			<div class="container-fluid cl">
-				<a class="logo navbar-logo f-l mr-10 hidden-xs" href="javascript:;"></a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="javascript:;"></a> <span class="logo navbar-slogan f-l mr-10 hidden-xs"></span> <a aria-hidden="false"
-					class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
+				<a class="logo navbar-logo f-l mr-10 hidden-xs" href="javascript:;"></a><font size="3"></font>
+				<a class="logo navbar-logo-m f-l mr-10 visible-xs" href="javascript:;"></a> <span class="logo navbar-slogan f-l mr-10 hidden-xs">上海市房屋状况信息中心</span>
+				<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 				<nav class="nav navbar-nav"></nav>
 				<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
 					<ul class="cl">
