--- a/src/main/webapp/webAdmin/user-list.html
+++ b/src/main/webapp/webAdmin/user-list.html
@@ -32,8 +32,9 @@
 	<header class="navbar-wrapper">
 		<div class="navbar navbar-fixed-top">
 			<div class="container-fluid cl">
-				<a class="logo navbar-logo f-l mr-10 hidden-xs" href="javascript:;"></a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="javascript:;"></a> <span class="logo navbar-slogan f-l mr-10 hidden-xs"></span> <a aria-hidden="false"
-					class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
+				<a class="logo navbar-logo f-l mr-10 hidden-xs" href="javascript:;"></a><font size="3"></font>
+				<a class="logo navbar-logo-m f-l mr-10 visible-xs" href="javascript:;"></a> <span class="logo navbar-slogan f-l mr-10 hidden-xs">上海市房屋状况信息中心</span>
+				<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
 				<nav class="nav navbar-nav"></nav>
 				<nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
 					<ul class="cl">
@@ -261,7 +262,7 @@
 										{
 											//重置密码
 											"render" : function(data, type, row) {
-												return "<a guid="+row.guid +" > 重置密码</a>";
+												return "<a guid="+row.guid +" onclick='updatePwd(this)'> 重置密码</a>";
 											},
 											"targets" : 9
 										},
@@ -295,17 +296,17 @@
 		}
 
 		// 重置密码点击触发事件
-		$("#user_list tbody tr").find("td:eq(8)").click(function() {
+	/* 	$("#user_list tbody tr").find("td:eq(8)").click(function() {
 			updatePwd(this);
 		}).mouseover(function() {
 			$(this).css("color", "red");
 		}).mouseout(function() {
 			$(this).css("color", "");
 		});
-
+ */
 		// 重置密码
 		function updatePwd(obj) {
-			var id = $(obj).children().attr("guid")
+			var id = $(obj).attr("guid");
 			var param = {};
 			param["guid"] = id;
 			param["random"] = newGuid();
@@ -332,7 +333,7 @@
 				}
 
 				if (myobj["success"]) {
-					$(obj).parent().find("td:eq(2)").html("111111");
+					$(obj).parent().parent().find("td:eq(2)").html("111111");
 				} else {
 					alert(myobj["info"]);
 				}
