change some things

--- a/src/main/webapp/webAdmin/business-list.html
+++ b/src/main/webapp/webAdmin/business-list.html
@@ -70,8 +70,8 @@
 					<ul>
 						<li class="current"><a href="user-list.html" title="用户管理">用户管理</a></li>
 						<li class="current"><a href="business-list.html" title="业务查询">业务查询</a></li>
-						<li class="current"><a href="rate-list.html" title="银行使用率">银行使用率</a></li>
-						<li class="current"><a href="offline-list.html" title="离线用户清单">离线用户清单</a></li>
+						<li class="current"><a href="rate-list.html" title="银行使用率">银行统计</a></li>
+						<li class="current"><a href="offline-list.html" title="离线用户清单">离线清单</a></li>
 					</ul>
 				</dd>
 			</dl>
