--- a/src/main/webapp/webAdmin/user-add.html
+++ b/src/main/webapp/webAdmin/user-add.html
@@ -42,9 +42,9 @@
 				</div>
 			</div>
 			<div class="row cl">
-				<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>机主姓名：</label>
+				<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>姓名：</label>
 				<div class="formControls col-xs-8 col-sm-9">
-					<input type="text" class="input-text" autocomplete="off" placeholder="机主姓名" id="name" name="name">
+					<input type="text" class="input-text" autocomplete="off" placeholder="姓名" id="name" name="name">
 				</div>
 			</div>
 			<div class="row cl">
@@ -85,7 +85,7 @@
 				</div>
 			</div>
 			<div class="row cl">
-				<label class="form-label col-xs-4 col-sm-3">用机构分支:</label>
+				<label class="form-label col-xs-4 col-sm-3">机构分支:</label>
 				<div class="formControls col-xs-8 col-sm-9">
 					<span class="select-box" style="width: 300px;"> <select class="select" name="typeGuid" size="1" id="typeGuid" >
 					</select>
@@ -294,7 +294,7 @@
 				return;
 			}
 			if ($("#name").val()=="") {
-				$("#err_msg").html("机主姓名为空");
+				$("#err_msg").html("姓名为空");
 				return;
 			}
 			$("#mobileSaveBtn").attr("disabled", true);
