--- a/src/main/webapp/webAdmin/user-list.html
+++ b/src/main/webapp/webAdmin/user-list.html
@@ -71,8 +71,8 @@
 					<ul>
 						<li class="current"><a href="user-list.html" title="用户管理">用户管理</a></li>
 						<li class="current"><a href="business-list.html" title="业务查询">业务查询</a></li>
-						<li class="current"><a href="rate-list.html" title="银行使用率">银行使用率</a></li>
-						<li class="current"><a href="offline-list.html" title="离线用户清单">离线用户清单</a></li>
+						<li class="current"><a href="rate-list.html" title="银行使用率">银行统计</a></li>
+						<li class="current"><a href="offline-list.html" title="离线用户清单">离线清单</a></li>
 					</ul>
 				</dd>
 			</dl>
@@ -128,7 +128,7 @@
 								<th width="100">手机号码</th>
 								<th width="90">密码</th>
 								<th width="150">用户 类型</th>
-								<th width="110">机主姓名</th>
+								<th width="110">姓名</th>
 								<th width="50">性别</th>
 								<th width="150">证件号码</th>
 								<th width="60">状态</th>
